package eaglesakura_ace;

import "AcesConstants.proto";
option java_package = "com.eaglesakura.andriders.protocol";

/**
 * GPS座標を示す。
 */
message GeoPoint {
    // 北緯
    required double latitude = 1;
    // 東経
    required double longitude = 2;
    // 高度
    required double altitude = 3;
}

// 現在位置の情報伝達
message GeoPayload {
    // 現在のGPS座標
	required GeoPoint location = 1;

	// 打刻した時刻
	required string date = 2;
}